
WhiteCore-Sim (Dev) 
Rowan D <greythane@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Feb 3rd 2014
* SceneManager - Add checks for operation when the 'root' scene is selected
   - load OAR - Add info message and prompt to continue.
   - save OAR - Require change to a named region
   - reset, remove, restart (runCommand) - Add info message and prompt to continue
     
* Rework LSL_Types operator ==(Vector3 lhs, Vector3 rhs) and Equals(object o) to return an intelligent equaltiy state
   - Currently set to be equal if like values differ by less than 0.00001 (This may need to be revised)
* Rework LSL_Type operator LSLFloat operators ==, != as per above


---------------------------------
Dec 24th, 2013
Commented out multiple variables that have been declared but not used (No code changes)
	- multiple files, identified with comment > // 20131224 not used
    - see alos  ## TODO ## as some code needs to be re-checked for functionality
    >> build warnings reduced from 82 to 45  
    	- remaing warnings are mainly private field definitions that are not used.... 
    	mainly in WhiteCoreOpenDynamicsEngine - AODEApi.cs & AODEDynamics.cs  and
    	the Physics.BulletSPlugin code (Opensim)

Dec 23rd, 2013
Merged patched applied to Aurora(Master)

Alicia Raven - Fix Bug #1261. Prevent bots being added to currency table. With bots
having random UUID every time they restart, this soon would get out of
hand with trash data.
	- Whitecore(Aurora)/Modules/Avatar/Currency/Simple.CurrencyConnector.cs
mdickson - Updated Texture Fetching to handle bytes=start- and bytes=-end which the newer viewers will send.
	- WhiteCore(Aurora)/Services/GenericServices/CapsService/CAPModules/AssetCAPS.cs
mdickson - Removed uneeded LINUX conditional around LSLFload operators It causes errors on Mono compiles.
	(Corrected this myself prior to this commit :) )
	- WhiteCore(Aurora)/WhiteCoreDotNetEngine(AuroraDotNetEngine)/APIs/LSL_Types.cs

greythane updates as shown below have already been applied..

